example/waf/waf.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: http_ingress
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: host-one
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: httpbin
                          typed_per_filter_config:
                            proxy.filters.http.waf:
                              "@type": type.googleapis.com/proxy.filters.http.waf.v2.RuleSet
                              waf_rule:
                                - waf_rule_path: ./ci/packaging/waf/REQUEST-912-DOS-PROTECTION.conf
                                  config:
                                    tx.dos_burst_time_slice: "10"
                                    tx.dos_counter_threshold: "5"
                                    tx.dos_block_timeout: "10"

                http_filters:
                  - name: proxy.filters.http.waf
                    typed_config:
                      "@type": type.googleapis.com/proxy.filters.http.waf.v2.RuleSet
                      waf_rule:
                        - waf_rule_path: ./ci/packaging/waf/REQUEST-912-DOS-PROTECTION.conf
                          config:
                            tx.dos_burst_time_slice: "10"
                            tx.dos_counter_threshold: "2"
                            tx.dos_block_timeout: "10"
                        - waf_rule_path: ./ci/packaging/waf/REQUEST-944-APPLICATION-ATTACK-JAVA.conf
                  - name: envoy.filters.http.router
  clusters:
    - name: httpbin
      connect_timeout: 5s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: httpbin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin.org
                      port_value: 80

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 20000
